k8s/microk8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sip-system
  labels:
    name: sip-system
